# ar-fighter

./: .gitmodules  CMakeLists.txt  README.md
ar-fighter/: CMakeLists.txt
ar-fighter-ios/ARFighter/: ARFighter-Bridging-Header.h  ARFighter-iOS.h  ARFighter-iOS.mm  ARFighterWrapper.h  ARFighterWrapper.mm  AppDelegate.h  AppDelegate.mm  AppDelegate.swift  FightViewController.swift  Info.plist  SettingsViewController.swift  ViewController.swift  key.txt  main.m
ar-fighter-ios/ARFighter.xcodeproj/: project.pbxproj
ar-fighter-ios/ARFighter.xcodeproj/project.xcworkspace/xcshareddata/: ARFighter.xcscmblueprint
ar-fighter-ios/ARFighter.xcodeproj/project.xcworkspace/xcuserdata/James.xcuserdatad/: UserInterfaceState.xcuserstate
ar-fighter-ios/ARFighter.xcodeproj/xcuserdata/James.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ar-fighter-ios/ARFighter.xcodeproj/xcuserdata/James.xcuserdatad/xcschemes/: ARFighter.xcscheme  xcschememanagement.plist
ar-fighter-ios/ARFighter/Base.lproj/: Main.storyboard
ar-fighter-ios/ARFighterTests/: ARFighterTests.swift
ar-fighter-ios/ARFighterUITests/: ARFighterUITests.swift
ar-fighter-ios/assets/: arrow.jmp  axis.jmp  basic.frag  basic.vert  cone.jmp  cube.jmp  cube1.jmp  test.txt
ar-fighter-ios/assets/animations/X_Bot/: X_Bot_neutral_idle.jmpAnimation  X_Bot_walk_x+.jmpAnimation  X_Bot_walk_z+.jmpAnimation
ar-fighter-ios/assets/animations/Y_Bot/: Y_Bot_neutral_idle.jmpAnimation  Y_Bot_punch.jmpAnimation  Y_Bot_walk_z+.jmpAnimation
ar-fighter-ios/assets/animations/x_bot/: x_bot_die.jmpAnimation  x_bot_punch_4.jmpAnimation
ar-fighter-ios/assets/animations/y_bot/: y_bot_block.jmpAnimation  y_bot_punch_3.jmpAnimation  y_bot_win.jmpAnimation
ar-fighter-ios/assets/entites/X_Bot/: X_Bot_Skeleton.jmpEntity
ar-fighter-ios/assets/entites/Y_Bot/: Y_Bot_Skeleton.jmpEntity
ar-fighter-ios/assets/meshes/X_Bot/: X_Bot_Joints.jmpMesh
ar-fighter-ios/assets/meshes/X_Bot/original/: X_Bot_Joints.jmpMesh
ar-fighter-ios/assets/meshes/Y_Bot/: Y_Bot_Joints.jmpMesh
ar-fighter-ios/assets/properties/X_Bot/: X_Bot_Surface.jmpProperty
ar-fighter-ios/assets/properties/Y_Bot/: Y_Bot_Joints.jmpProperty
ar-fighter-ios/assets/shaders/: basic.frag  basic.vert
ar-fighter/assets/: cube.jmp
ar-fighter/assets/animations/Y_Bot/: neutral_idle.jmpAnimation  punch.jmpAnimation
ar-fighter/assets/entites/X_Bot/: X_Bot_Skeleton.jmpEntity
ar-fighter/assets/entites/Y_Bot/: Y_Bot_Skeleton.jmpEntity
ar-fighter/assets/materials/X_Bot/: X_Bot_Joints.jmpMat  X_Bot_Surface.jmpMat
ar-fighter/assets/materials/Y_Bot/: Y_Bot_Joints.jmpMat  Y_Bot_Surface.jmpMat
ar-fighter/assets/meshes/X_Bot/: X_Bot_Joints.jmpMesh
ar-fighter/assets/meshes/Y_Bot/: Y_Bot_Joints.jmpMesh
ar-fighter/assets/meshes/Y_Bot/low/: Alpha_JointsMesh.jmpMesh  Alpha_SurfaceMesh.jmpMesh
ar-fighter/assets/properties/X_Bot/: X_Bot_Joints.jmpProperty
ar-fighter/assets/properties/Y_Bot/: Y_Bot_Surface.jmpProperty
ar-fighter/assets/shaders/: animatable.vert  basic.frag
ar-fighter/include/: CMakeLists.txt
ar-fighter/include/ar-fighter/: ARFighter.h  CMakeLists.txt  FightSceneLogic.h  MainMenuSceneLogic.h  SettingsSceneLogic.h
ar-fighter/include/ar-fighter/AI/: CMakeLists.txt
ar-fighter/include/ar-fighter/AI/FSM/: AIFSMStateCombat.h  AIFSMStateLose.h  AIFSMStateMoveToPlayer.h  AIFSMStateWin.h  CMakeLists.txt
ar-fighter/include/ar-fighter/Game_Objects/: CMakeLists.txt  Character.h  X_Bot.h  Y_Bot.h
ar-fighter/raw_assets/: cube.dae
ar-fighter/raw_assets/X_Bot/: neutral_idle.dae  walking.dae
ar-fighter/raw_assets/X_Bot/Animations/block/: x_bot_block.jmpAnimation
ar-fighter/raw_assets/X_Bot/Animations/punch/punch1/: x_bot_punch_1.jmpAnimation
ar-fighter/raw_assets/X_Bot/Animations/punch/punch2/: x_bot_punch_2.jmpAnimation
ar-fighter/raw_assets/X_Bot/Animations/punch/punch3/: x_bot_punch_3.jmpAnimation
ar-fighter/raw_assets/X_Bot/Animations/win/: x_bot_win.jmpAnimation
ar-fighter/raw_assets/Y_Bot/: Y_Bot_reduced.blend  Y_Bot_reduced.dae  neutral_idle.dae  punching.dae
ar-fighter/raw_assets/Y_Bot/Animations/die/: y_bot_die.jmpAnimation
ar-fighter/raw_assets/Y_Bot/Animations/idle/: Y_Bot_neutral_idle.jmpAnimation
ar-fighter/raw_assets/Y_Bot/Animations/punch/punch1/: y_bot_punch_1.jmpAnimation
ar-fighter/raw_assets/Y_Bot/Animations/punch/punch2/: y_bot_punch_2.jmpAnimation
ar-fighter/raw_assets/Y_Bot/Animations/punch/punch4/: y_bot_punch_4.jmpAnimation
ar-fighter/raw_assets/Y_Bot/Animations/walking/: Y_Bot_walk_x+.jmpAnimation
ar-fighter/raw_assets/textures/: ar-indicator.psd
ar-fighter/raw_assets/textures/numbers/: 123-300x300.psd  arrow.psd
ar-fighter/raw_assets/textures/portraits/: portrait-template.psd
ar-fighter/raw_assets/textures/text/: ar-fighter.psd  confirm.psd  fight.psd  lose.psd  opponent.psd  paused.psd  player.psd  settings.psd  win.psd
ar-fighter/src/: ARFighter.cpp  CMakeLists.txt  FightSceneLogic.cpp  MainMenuSceneLogic.cpp  SettingsSceneLogic.cpp
ar-fighter/src/AI/: CMakeLists.txt
ar-fighter/src/AI/FSM/: CMakeLists.txt
ar-fighter/src/Game_Objects/: CMakeLists.txt  Character.cpp  X_Bot.cpp  Y_Bot.cpp
